corrected img code

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
   <!--Tell your story here, between the body tags-->
     <h1>Meeting Makoa</h1>
-    <img scr="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTN6dXFtdGNsY3lkcGM3cmw5eWttb3I4ODE4N3VjMmF1dGgxdWJsMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/e3axbmr3DcqA9Pe7J2/giphy.gif" alt="A couple holding Hands" width ="300" height="200"> <br>
-    <img scr="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzF6bTQxams3Zzdwcmsyenlvc29oNHdzZG9jYmxiaDNtZ2c2bHVheSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/b42ZOYEvJptb4g65kV/giphy.gif" alt="A dog holding boba" width="300" height="300"> <br>
-    <img scr="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHM3Z2c5enFyaTZmZHQ1ZzJsdXExcHhpeDk4Z2w2bGs4NDVmY2t1ZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/J4JIr4IlWoAzW2Ys89/giphy.gif" alt="Girl holding binoculars" width="300" height="300"> <br>
+    <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTN6dXFtdGNsY3lkcGM3cmw5eWttb3I4ODE4N3VjMmF1dGgxdWJsMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/e3axbmr3DcqA9Pe7J2/giphy.gif" alt="A couple holding Hands" width ="300" height="200"> <br>
+    <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzF6bTQxams3Zzdwcmsyenlvc29oNHdzZG9jYmxiaDNtZ2c2bHVheSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/b42ZOYEvJptb4g65kV/giphy.gif" alt="A dog holding boba" width="300" height="300"> <br>
+    <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHM3Z2c5enFyaTZmZHQ1ZzJsdXExcHhpeDk4Z2w2bGs4NDVmY2t1ZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/J4JIr4IlWoAzW2Ys89/giphy.gif" alt="Girl holding binoculars" width="300" height="300"> <br>
   </body>
 </html>
