--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
     <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTN6dXFtdGNsY3lkcGM3cmw5eWttb3I4ODE4N3VjMmF1dGgxdWJsMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/e3axbmr3DcqA9Pe7J2/giphy.gif" alt="A couple holding Hands" width ="300" height="200"> <br>
     <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzF6bTQxams3Zzdwcmsyenlvc29oNHdzZG9jYmxiaDNtZ2c2bHVheSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/b42ZOYEvJptb4g65kV/giphy.gif" alt="A dog holding boba" width="300" height="300"> <br>
     <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHM3Z2c5enFyaTZmZHQ1ZzJsdXExcHhpeDk4Z2w2bGs4NDVmY2t1ZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/J4JIr4IlWoAzW2Ys89/giphy.gif" alt="Girl holding binoculars" width="300" height="300"> <br>
+    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHd4bnppODdkZmF5Y2c0aXF0MHc3eTdwd2hmMXFqZHpmaTg5ZjRtaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xT5LMpTiZ0fQ3UGw0M/giphy.gif" alt="Man standing against sign inside pet store" width="300" height="200"> <br>
+    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExczgxanZuc25lYXhza2QwNWxhOHRpMDNjemQ5b3Vvczc4azF6ZGxyOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eXg8Ij7JgnyDu/giphy.gif" alt="Man dramatically opening door to building" width="300" height="300"> <br>
+    <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNWNtNXpxOTNqMjZ0ODJhYnhpeWtoejg4dmR3M2ttZ3h4dW9qcHl4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/QE1JjBzX0pd2qiKONV/giphy.gif" alt="2 guys looking into window" width="200" height="300"> <br>
+    <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExY3MwM25kOXQwYW54amFoc3MzcXYwc3B5MzZwdTQ2Nm11enM1MnhncyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zAA67ZUNWf4L6/giphy.gif" alt="shiba inu puppy" width ="300" height="200"> <br>
+    <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3Z1MW9yZXY1bW9wNXU5bGxtczNyeXp0czFzdms1MHgyNnhxeGV4cyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XqPHWAIkmWV0c/giphy.gif" alt="girl with hearts coming out of her eyes" width ="300" height="200"> <br>
   </body>
 </html>
