--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="Story in 10+ gifs"
     />
     <meta name="robots" content="index,follow" />
-    <meta property="og:title" content="Your Title" />
+    <meta property="og:title" content="Meeting Makoa" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://github.com/" />
     <meta name="twitter:card" content="summary" />
@@ -30,5 +30,7 @@
     <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNWNtNXpxOTNqMjZ0ODJhYnhpeWtoejg4dmR3M2ttZ3h4dW9qcHl4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/QE1JjBzX0pd2qiKONV/giphy.gif" alt="2 guys looking into window" width="200" height="300"> <br>
     <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExY3MwM25kOXQwYW54amFoc3MzcXYwc3B5MzZwdTQ2Nm11enM1MnhncyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zAA67ZUNWf4L6/giphy.gif" alt="shiba inu puppy" width ="300" height="200"> <br>
     <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3Z1MW9yZXY1bW9wNXU5bGxtczNyeXp0czFzdms1MHgyNnhxeGV4cyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XqPHWAIkmWV0c/giphy.gif" alt="girl with hearts coming out of her eyes" width ="300" height="200"> <br>
+    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTRka29lMGJobWRoN2dkaXRrMjhicWVpaTRjZjlnYjdydTI5bW03bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/d2vtMFc2YTVjW/giphy.gif" alt="petting a shiba inu"  width ="300" height="200"> <br>
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZHE3djEyc2Fmd2t1czRjOHV6cmowMjQyaG0zNGM3ZzEybHBkeTZ2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RBsKImPBQK7roOKbd8/giphy.gif" alt="taking a dog home" width ="300" height="200"> <br>
   </body>
 </html>
