removing unnecessary line break

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExY3MwM25kOXQwYW54amFoc3MzcXYwc3B5MzZwdTQ2Nm11enM1MnhncyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zAA67ZUNWf4L6/giphy.gif" alt="shiba inu puppy" width ="300" height="200"> <br>
     <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3Z1MW9yZXY1bW9wNXU5bGxtczNyeXp0czFzdms1MHgyNnhxeGV4cyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XqPHWAIkmWV0c/giphy.gif" alt="girl with hearts coming out of her eyes" width ="300" height="200"> <br>
     <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHRoa21qdDU5MXJmejB0bWJsYnFkeDloaXhjbHp2eW93N3M4cWJidSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/hUVybAnJlnp7O/giphy.gif" alt="baby throwing money"  width ="300" height="200"> <br>
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZHE3djEyc2Fmd2t1czRjOHV6cmowMjQyaG0zNGM3ZzEybHBkeTZ2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RBsKImPBQK7roOKbd8/giphy.gif" alt="taking a dog home" width ="300" height="200"> <br>
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZHE3djEyc2Fmd2t1czRjOHV6cmowMjQyaG0zNGM3ZzEybHBkeTZ2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RBsKImPBQK7roOKbd8/giphy.gif" alt="taking a dog home" width ="300" height="200">
     <ul>
       <li>I was on a date with my boyfriend</li>
       <li>We decided to get some boba</li>
